# Flossy

./: CMakeLists.txt  License.md  README.md  Readme.md  example.cpp  flossy.h  flossy_test.cpp
.github/workflows/: build-test.yml  codeql-analysis.yml
Documentation/: References.md
Documentation/Compiler/Explorer/4BFD/: Index.md  Result.md
Documentation/Compiler/Explorer/C8F6/: Code.md  Index.md  Result.md
Include/: Flossy.hpp
Include/Flossy/: Flossy.hpp
Test/: TestFlossy.cpp  flossy_test.cpp
dc/: fast-dtoa.cc  m2.cpp  main.cpp
